- Increased number of output colours on picker from 96/98 - Added in legacy colour classes

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -1085,202 +1085,236 @@
     color: var(--brand-default-fg);
 }
 
-/* IRC COLOURS 16/96 */
-.irc-fg-colour-0 { color: #fff; }
+/* IRC COLOURS 0/98 */
+.irc-bg-colour-white { background-color: #fff; }
+.irc-bg-colour-black { background-color: #000; }
+.irc-bg-colour-blue { background-color: #00f; }
+.irc-bg-colour-green { background-color: #0f0; }
+.irc-bg-colour-light-red { background-color: #ff5959; }
+.irc-bg-colour-brown { background-color: #743a00; }
+.irc-bg-colour-purple { background-color: #a500ff; }
+.irc-bg-colour-orange { background-color: #ff8c00; }
+.irc-bg-colour-yellow { background-color: #ff0; }
+.irc-bg-colour-light-green { background-color: #6fff6f; }
+.irc-bg-colour-cyan { background-color: #0cc; }
+.irc-bg-colour-light-cyan { background-color: #6dffff; }
+.irc-bg-colour-light-blue { background-color: #59b4ff; }
+.irc-bg-colour-pink { background-color: #f0f; }
+.irc-bg-colour-grey { background-color: #a6a6a6; }
+.irc-bg-colour-light-grey { background-color: #e2e2e2; }
 .irc-bg-colour-0 { background-color: #fff; }
-.irc-fg-colour-1 { color: #000; }
 .irc-bg-colour-1 { background-color: #000; }
-.irc-fg-colour-2 { color: #00f; }
 .irc-bg-colour-2 { background-color: #00f; }
-.irc-fg-colour-3 { color: #0f0; }
 .irc-bg-colour-3 { background-color: #0f0; }
-.irc-fg-colour-4 { color: #ff5959; }
 .irc-bg-colour-4 { background-color: #ff5959; }
-.irc-fg-colour-5 { color: #743a00; }
 .irc-bg-colour-5 { background-color: #743a00; }
-.irc-fg-colour-6 { color: #a500ff; }
 .irc-bg-colour-6 { background-color: #a500ff; }
-.irc-fg-colour-7 { color: #ff8c00; }
 .irc-bg-colour-7 { background-color: #ff8c00; }
-.irc-fg-colour-8 { color: #ff0; }
 .irc-bg-colour-8 { background-color: #ff0; }
-.irc-fg-colour-9 { color: #6fff6f; }
 .irc-bg-colour-9 { background-color: #6fff6f; }
-.irc-fg-colour-10 { color: #0cc; }
 .irc-bg-colour-10 { background-color: #0cc; }
-.irc-fg-colour-11 { color: #6dffff; }
 .irc-bg-colour-11 { background-color: #6dffff; }
-.irc-fg-colour-12 { color: #59b4ff; }
 .irc-bg-colour-12 { background-color: #59b4ff; }
-.irc-fg-colour-13 { color: #f0f; }
 .irc-bg-colour-13 { background-color: #f0f; }
-.irc-fg-colour-14 { color: #a6a6a6; }
 .irc-bg-colour-14 { background-color: #a6a6a6; }
-.irc-fg-colour-15 { color: #e2e2e2; }
 .irc-bg-colour-15 { background-color: #e2e2e2; }
-.irc-fg-colour-16 { color: #470000; }
 .irc-bg-colour-16 { background-color: #470000; }
-.irc-fg-colour-17 { color: #472100; }
 .irc-bg-colour-17 { background-color: #472100; }
-.irc-fg-colour-18 { color: #474700; }
 .irc-bg-colour-18 { background-color: #474700; }
-.irc-fg-colour-19 { color: #324700; }
 .irc-bg-colour-19 { background-color: #324700; }
-.irc-fg-colour-20 { color: #004700; }
 .irc-bg-colour-20 { background-color: #004700; }
-.irc-fg-colour-21 { color: #00472c; }
 .irc-bg-colour-21 { background-color: #00472c; }
-.irc-fg-colour-22 { color: #004747; }
 .irc-bg-colour-22 { background-color: #004747; }
-.irc-fg-colour-23 { color: #002747; }
 .irc-bg-colour-23 { background-color: #002747; }
-.irc-fg-colour-24 { color: #000047; }
 .irc-bg-colour-24 { background-color: #000047; }
-.irc-fg-colour-25 { color: #2e0047; }
 .irc-bg-colour-25 { background-color: #2e0047; }
-.irc-fg-colour-26 { color: #470047; }
 .irc-bg-colour-26 { background-color: #470047; }
-.irc-fg-colour-27 { color: #47002a; }
 .irc-bg-colour-27 { background-color: #47002a; }
-.irc-fg-colour-28 { color: #740000; }
 .irc-bg-colour-28 { background-color: #740000; }
-.irc-fg-colour-29 { color: #743a00; }
 .irc-bg-colour-29 { background-color: #743a00; }
-.irc-fg-colour-30 { color: #747400; }
 .irc-bg-colour-30 { background-color: #747400; }
-.irc-fg-colour-31 { color: #517400; }
 .irc-bg-colour-31 { background-color: #517400; }
-.irc-fg-colour-32 { color: #007400; }
 .irc-bg-colour-32 { background-color: #007400; }
-.irc-fg-colour-33 { color: #007449; }
 .irc-bg-colour-33 { background-color: #007449; }
-.irc-fg-colour-34 { color: #007474; }
 .irc-bg-colour-34 { background-color: #007474; }
-.irc-fg-colour-35 { color: #004074; }
 .irc-bg-colour-35 { background-color: #004074; }
-.irc-fg-colour-36 { color: #000074; }
 .irc-bg-colour-36 { background-color: #000074; }
-.irc-fg-colour-37 { color: #4b0074; }
 .irc-bg-colour-37 { background-color: #4b0074; }
-.irc-fg-colour-38 { color: #740074; }
 .irc-bg-colour-38 { background-color: #740074; }
-.irc-fg-colour-39 { color: #740045; }
 .irc-bg-colour-39 { background-color: #740045; }
-.irc-fg-colour-40 { color: #b50000; }
 .irc-bg-colour-40 { background-color: #b50000; }
-.irc-fg-colour-41 { color: #b56300; }
 .irc-bg-colour-41 { background-color: #b56300; }
-.irc-fg-colour-42 { color: #b5b500; }
 .irc-bg-colour-42 { background-color: #b5b500; }
-.irc-fg-colour-43 { color: #7db500; }
 .irc-bg-colour-43 { background-color: #7db500; }
-.irc-fg-colour-44 { color: #00b500; }
 .irc-bg-colour-44 { background-color: #00b500; }
-.irc-fg-colour-45 { color: #00b571; }
 .irc-bg-colour-45 { background-color: #00b571; }
-.irc-fg-colour-46 { color: #00b5b5; }
 .irc-bg-colour-46 { background-color: #00b5b5; }
-.irc-fg-colour-47 { color: #0063b5; }
 .irc-bg-colour-47 { background-color: #0063b5; }
-.irc-fg-colour-48 { color: #0000b5; }
 .irc-bg-colour-48 { background-color: #0000b5; }
-.irc-fg-colour-49 { color: #7500b5; }
 .irc-bg-colour-49 { background-color: #7500b5; }
-.irc-fg-colour-50 { color: #b500b5; }
 .irc-bg-colour-50 { background-color: #b500b5; }
-.irc-fg-colour-51 { color: #b5006b; }
 .irc-bg-colour-51 { background-color: #b5006b; }
-.irc-fg-colour-52 { color: #ff0000; }
 .irc-bg-colour-52 { background-color: #ff0000; }
-.irc-fg-colour-53 { color: #ff8c00; }
 .irc-bg-colour-53 { background-color: #ff8c00; }
-.irc-fg-colour-54 { color: #ffff00; }
 .irc-bg-colour-54 { background-color: #ffff00; }
-.irc-fg-colour-55 { color: #b2ff00; }
 .irc-bg-colour-55 { background-color: #b2ff00; }
-.irc-fg-colour-56 { color: #00ff00; }
 .irc-bg-colour-56 { background-color: #00ff00; }
-.irc-fg-colour-57 { color: #00ffa0; }
 .irc-bg-colour-57 { background-color: #00ffa0; }
-.irc-fg-colour-58 { color: #00ffff; }
 .irc-bg-colour-58 { background-color: #00ffff; }
-.irc-fg-colour-59 { color: #008cff; }
 .irc-bg-colour-59 { background-color: #008cff; }
-.irc-fg-colour-60 { color: #0000ff; }
 .irc-bg-colour-60 { background-color: #0000ff; }
-.irc-fg-colour-61 { color: #a500ff; }
 .irc-bg-colour-61 { background-color: #a500ff; }
-.irc-fg-colour-62 { color: #ff00ff; }
 .irc-bg-colour-62 { background-color: #ff00ff; }
-.irc-fg-colour-63 { color: #ff0098; }
 .irc-bg-colour-63 { background-color: #ff0098; }
-.irc-fg-colour-64 { color: #ff5959; }
 .irc-bg-colour-64 { background-color: #ff5959; }
-.irc-fg-colour-65 { color: #ffb459; }
 .irc-bg-colour-65 { background-color: #ffb459; }
-.irc-fg-colour-66 { color: #ffff71; }
 .irc-bg-colour-66 { background-color: #ffff71; }
-.irc-fg-colour-67 { color: #cfff60; }
 .irc-bg-colour-67 { background-color: #cfff60; }
-.irc-fg-colour-68 { color: #6fff6f; }
 .irc-bg-colour-68 { background-color: #6fff6f; }
-.irc-fg-colour-69 { color: #65ffc9; }
 .irc-bg-colour-69 { background-color: #65ffc9; }
-.irc-fg-colour-70 { color: #6dffff; }
 .irc-bg-colour-70 { background-color: #6dffff; }
-.irc-fg-colour-71 { color: #59b4ff; }
 .irc-bg-colour-71 { background-color: #59b4ff; }
-.irc-fg-colour-72 { color: #5959ff; }
 .irc-bg-colour-72 { background-color: #5959ff; }
-.irc-fg-colour-73 { color: #c459ff; }
 .irc-bg-colour-73 { background-color: #c459ff; }
-.irc-fg-colour-74 { color: #ff66ff; }
 .irc-bg-colour-74 { background-color: #ff66ff; }
-.irc-fg-colour-75 { color: #ff59bc; }
 .irc-bg-colour-75 { background-color: #ff59bc; }
-.irc-fg-colour-76 { color: #ff9c9c; }
 .irc-bg-colour-76 { background-color: #ff9c9c; }
-.irc-fg-colour-77 { color: #ffd39c; }
 .irc-bg-colour-77 { background-color: #ffd39c; }
-.irc-fg-colour-78 { color: #ffff9c; }
 .irc-bg-colour-78 { background-color: #ffff9c; }
-.irc-fg-colour-79 { color: #e2ff9c; }
 .irc-bg-colour-79 { background-color: #e2ff9c; }
-.irc-fg-colour-80 { color: #9cff9c; }
 .irc-bg-colour-80 { background-color: #9cff9c; }
-.irc-fg-colour-81 { color: #9cffdb; }
 .irc-bg-colour-81 { background-color: #9cffdb; }
-.irc-fg-colour-82 { color: #9cffff; }
 .irc-bg-colour-82 { background-color: #9cffff; }
-.irc-fg-colour-83 { color: #9cd3ff; }
 .irc-bg-colour-83 { background-color: #9cd3ff; }
-.irc-fg-colour-84 { color: #9c9cff; }
 .irc-bg-colour-84 { background-color: #9c9cff; }
-.irc-fg-colour-85 { color: #dc9cff; }
 .irc-bg-colour-85 { background-color: #dc9cff; }
-.irc-fg-colour-86 { color: #ff9cff; }
 .irc-bg-colour-86 { background-color: #ff9cff; }
-.irc-fg-colour-87 { color: #ff94d3; }
 .irc-bg-colour-87 { background-color: #ff94d3; }
-.irc-fg-colour-88 { color: #000000; }
 .irc-bg-colour-88 { background-color: #000000; }
-.irc-fg-colour-89 { color: #131313; }
 .irc-bg-colour-89 { background-color: #131313; }
-.irc-fg-colour-90 { color: #282828; }
 .irc-bg-colour-90 { background-color: #282828; }
-.irc-fg-colour-91 { color: #363636; }
 .irc-bg-colour-91 { background-color: #363636; }
-.irc-fg-colour-92 { color: #4d4d4d; }
 .irc-bg-colour-92 { background-color: #4d4d4d; }
-.irc-fg-colour-93 { color: #656565; }
 .irc-bg-colour-93 { background-color: #656565; }
-.irc-fg-colour-94 { color: #818181; }
 .irc-bg-colour-94 { background-color: #818181; }
-.irc-fg-colour-95 { color: #9f9f9f; }
 .irc-bg-colour-95 { background-color: #9f9f9f; }
-.irc-fg-colour-96 { color: #bcbcbc; }
 .irc-bg-colour-96 { background-color: #bcbcbc; }
-.irc-fg-colour-97 { color: #e2e2e2; }
 .irc-bg-colour-97 { background-color: #e2e2e2; }
-.irc-fg-colour-98 { color: #ffffff; }
 .irc-bg-colour-98 { background-color: #ffffff; }
+
+
+.irc-fg-colour-white { color: #fff; }
+.irc-fg-colour-black { color: #000; }
+.irc-fg-colour-blue { color: #00f; }
+.irc-fg-colour-green { color: #0f0; }
+.irc-fg-colour-light-red { color: #ff5959; }
+.irc-fg-colour-brown { color: #743a00; }
+.irc-fg-colour-purple { color: #a500ff; }
+.irc-fg-colour-orange { color: #ff8c00; }
+.irc-fg-colour-yellow { color: #ff0; }
+.irc-fg-colour-light-green { color: #6fff6f; }
+.irc-fg-colour-cyan { color: #0cc; }
+.irc-fg-colour-light-cyan { color: #6dffff; }
+.irc-fg-colour-light-blue { color: #59b4ff; }
+.irc-fg-colour-pink { color: #f0f; }
+.irc-fg-colour-grey { color: #a6a6a6; }
+.irc-fg-colour-light-grey { color: #e2e2e2; }
+.irc-fg-colour-0 { color: #fff; }
+.irc-fg-colour-1 { color: #000; }
+.irc-fg-colour-2 { color: #00f; }
+.irc-fg-colour-3 { color: #0f0; }
+.irc-fg-colour-4 { color: #ff5959; }
+.irc-fg-colour-5 { color: #743a00; }
+.irc-fg-colour-6 { color: #a500ff; }
+.irc-fg-colour-7 { color: #ff8c00; }
+.irc-fg-colour-8 { color: #ff0; }
+.irc-fg-colour-9 { color: #6fff6f; }
+.irc-fg-colour-10 { color: #0cc; }
+.irc-fg-colour-11 { color: #6dffff; }
+.irc-fg-colour-12 { color: #59b4ff; }
+.irc-fg-colour-13 { color: #f0f; }
+.irc-fg-colour-14 { color: #a6a6a6; }
+.irc-fg-colour-15 { color: #e2e2e2; }
+.irc-fg-colour-16 { color: #470000; }
+.irc-fg-colour-17 { color: #472100; }
+.irc-fg-colour-18 { color: #474700; }
+.irc-fg-colour-19 { color: #324700; }
+.irc-fg-colour-20 { color: #004700; }
+.irc-fg-colour-21 { color: #00472c; }
+.irc-fg-colour-22 { color: #004747; }
+.irc-fg-colour-23 { color: #002747; }
+.irc-fg-colour-24 { color: #000047; }
+.irc-fg-colour-25 { color: #2e0047; }
+.irc-fg-colour-26 { color: #470047; }
+.irc-fg-colour-27 { color: #47002a; }
+.irc-fg-colour-28 { color: #740000; }
+.irc-fg-colour-29 { color: #743a00; }
+.irc-fg-colour-30 { color: #747400; }
+.irc-fg-colour-31 { color: #517400; }
+.irc-fg-colour-32 { color: #007400; }
+.irc-fg-colour-33 { color: #007449; }
+.irc-fg-colour-34 { color: #007474; }
+.irc-fg-colour-35 { color: #004074; }
+.irc-fg-colour-36 { color: #000074; }
+.irc-fg-colour-37 { color: #4b0074; }
+.irc-fg-colour-38 { color: #740074; }
+.irc-fg-colour-39 { color: #740045; }
+.irc-fg-colour-40 { color: #b50000; }
+.irc-fg-colour-41 { color: #b56300; }
+.irc-fg-colour-42 { color: #b5b500; }
+.irc-fg-colour-43 { color: #7db500; }
+.irc-fg-colour-44 { color: #00b500; }
+.irc-fg-colour-45 { color: #00b571; }
+.irc-fg-colour-46 { color: #00b5b5; }
+.irc-fg-colour-47 { color: #0063b5; }
+.irc-fg-colour-48 { color: #0000b5; }
+.irc-fg-colour-49 { color: #7500b5; }
+.irc-fg-colour-50 { color: #b500b5; }
+.irc-fg-colour-51 { color: #b5006b; }
+.irc-fg-colour-52 { color: #ff0000; }
+.irc-fg-colour-53 { color: #ff8c00; }
+.irc-fg-colour-54 { color: #ffff00; }
+.irc-fg-colour-55 { color: #b2ff00; }
+.irc-fg-colour-56 { color: #00ff00; }
+.irc-fg-colour-57 { color: #00ffa0; }
+.irc-fg-colour-58 { color: #00ffff; }
+.irc-fg-colour-59 { color: #008cff; }
+.irc-fg-colour-60 { color: #0000ff; }
+.irc-fg-colour-61 { color: #a500ff; }
+.irc-fg-colour-62 { color: #ff00ff; }
+.irc-fg-colour-63 { color: #ff0098; }
+.irc-fg-colour-64 { color: #ff5959; }
+.irc-fg-colour-65 { color: #ffb459; }
+.irc-fg-colour-66 { color: #ffff71; }
+.irc-fg-colour-67 { color: #cfff60; }
+.irc-fg-colour-68 { color: #6fff6f; }
+.irc-fg-colour-69 { color: #65ffc9; }
+.irc-fg-colour-70 { color: #6dffff; }
+.irc-fg-colour-71 { color: #59b4ff; }
+.irc-fg-colour-72 { color: #5959ff; }
+.irc-fg-colour-73 { color: #c459ff; }
+.irc-fg-colour-74 { color: #ff66ff; }
+.irc-fg-colour-75 { color: #ff59bc; }
+.irc-fg-colour-76 { color: #ff9c9c; }
+.irc-fg-colour-77 { color: #ffd39c; }
+.irc-fg-colour-78 { color: #ffff9c; }
+.irc-fg-colour-79 { color: #e2ff9c; }
+.irc-fg-colour-80 { color: #9cff9c; }
+.irc-fg-colour-81 { color: #9cffdb; }
+.irc-fg-colour-82 { color: #9cffff; }
+.irc-fg-colour-83 { color: #9cd3ff; }
+.irc-fg-colour-84 { color: #9c9cff; }
+.irc-fg-colour-85 { color: #dc9cff; }
+.irc-fg-colour-86 { color: #ff9cff; }
+.irc-fg-colour-87 { color: #ff94d3; }
+.irc-fg-colour-88 { color: #000000; }
+.irc-fg-colour-89 { color: #131313; }
+.irc-fg-colour-90 { color: #282828; }
+.irc-fg-colour-91 { color: #363636; }
+.irc-fg-colour-92 { color: #4d4d4d; }
+.irc-fg-colour-93 { color: #656565; }
+.irc-fg-colour-94 { color: #818181; }
+.irc-fg-colour-95 { color: #9f9f9f; }
+.irc-fg-colour-96 { color: #bcbcbc; }
+.irc-fg-colour-97 { color: #e2e2e2; }
+.irc-fg-colour-98 { color: #ffffff; }
