- Reworked the control input plugin / tools section / send button

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -189,7 +189,8 @@
 }
 
 .kiwi-controlinput-send {
-    background: #f1f1f1;
+    background: var(--brand-primary);
+    color: var(--brand-default-bg);
 }
 
 .kiwi-controlinput-active-tool {
