- Remove background attribute from inline styles - Set the colour of the timestamp to be default-fg in the base theme file

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -857,6 +857,11 @@
     background-color: var(--brand-default-bg);
 }
 
+/* Messagelayout inline */
+.kiwi-messagelist-message--text .kiwi-messagelist-time {
+    color: var(--brand-default-fg);
+}
+
 /* ---- Traffic Messages ---- */
 .kiwi-messagelist-message-traffic-join {
     color: var(--brand-primary);
