- Remove background colour from messagelist inline timestamp - Add default colour to the messagelist inline timestamp in the base.css theme file

--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -852,6 +852,11 @@
     background-color: var(--brand-default-fg);
 }
 
+/* Messagelayout inline */
+.kiwi-messagelist-message--text .kiwi-messagelist-time {
+    color: var(--brand-default-fg);
+}
+
 /* Connection Styling */
 .kiwi-messagelist-message-connection {
     background-color: var(--brand-default-bg);
