--- a/static/themes/grayfox/theme.css
+++ b/static/themes/grayfox/theme.css
@@ -33,7 +33,6 @@
     --comp-usermenu-open-bg: #303742;
     --comp-statebrowser-network-border: #bda28e;
 
-
     /* Sidebars ( Right Side ) */
     --comp-sidebar-bg: #fff;
     --comp-sidebar-fg: #22231f;
@@ -50,7 +49,8 @@
 .kiwi-appsettings-title,
 .kiwi-appsettings-block h3,
 .kiwi-networksettings .kiwi-title,
-.u-form input[type='checkbox']:after, .u-form input[type='radio']:after {
+.u-form input[type='checkbox']::after,
+.u-form input[type='radio']::after {
     background-color: var(--brand-primary);
 }
 
@@ -91,6 +91,7 @@
 .kiwi-awaystatusindicator {
     background: #41e8c9;
 }
+
 .kiwi-awaystatusindicator.kiwi-awaystatusindicator--away {
     background: var(--brand-error);
 }
