- Replace the Checkbox :after with checkbox:checked { bg-color }

--- a/src/res/globalStyle.css
+++ b/src/res/globalStyle.css
@@ -97,6 +97,7 @@ select {
     border: 2px solid;
 }
 
+/*
 .u-form input[type='checkbox']::after,
 .u-form input[type='radio']::after {
     position: absolute;
@@ -109,7 +110,9 @@ select {
     transition: all 0.3s;
     opacity: 0;
 }
+*/
 
+/*
 .u-form input[type='checkbox']:checked::after,
 .u-form input[type='radio']:checked::after {
     position: absolute;
@@ -122,6 +125,7 @@ select {
     transition: all 0.3s;
     opacity: 1;
 }
+*/
 
 .u-form input[type="radio"] {
     float: right;
