--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -96,8 +96,8 @@
     background-color: var(--brand-default-bg);
 }
 
-.u-form input[type='checkbox']::after,
-.u-form input[type='radio']::after {
+.u-form input[type='checkbox']:checked,
+.u-form input[type='radio']:checked {
     background: var(--brand-primary);
 }
 
