--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -196,8 +196,8 @@
   border-bottom: 1px solid #f1f1f1;
 }
 
-.u-form input[type='checkbox']:after,
-.u-form input[type='radio']:after {
+.u-form input[type='checkbox']:checked,
+.u-form input[type='radio']:checked {
     background-color: #f1f1f1;
 }
 
